--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,12 @@ title: Contact us!
 permalink: /contact/
 ---
 
-<!-- Slider Start -->
 <section id="global-header">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h1>Drop Us A Note</h1>
-          <p>Don’t just take our word for it. Check out some of our latest work.</p>
+          <h1>About me!!!</h1>
         </div>
       </div>
     </div>
@@ -20,49 +18,43 @@ permalink: /contact/
 <!-- contact form start -->
 <section id="contact-form">
   <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-sm-12">
-        <div class="block">
-          <form>
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Your Name">
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Email Address">
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Subject">
-            </div>
-          </form>
-        </div>
-      </div>
-      <div class="col-md-6 col-sm-12">
-        <div class="block">
-          <form>
-            <div class="form-group-2">
-              <textarea class="form-control" rows="3" placeholder="Your Message"></textarea>
-            </div>
-            <button class="btn btn-default" type="submit">Send Message</button>
-          </form>
-        </div>
-      </div>
-    </div>
     <div id="contact-box" class="row">
       <div class="col-md-6 col-sm-12">
-        <div class="block">
-          <h2>Stop By For A visit</h2>
+      <div class="block">
+          <h2>About me!</h2>
+          <h4>어느덧 자바 개발 11년차에 돌입 하였습니다. <br /> Clean Code, TDD 를 지향 하며 항상 배우는 자세로 업무를 수행하는 <br /> 성실한 개발자입니다.</h4>
+          <br />
+          <h4>주요 경력</h4>
           <ul class="address-block">
             <li>
-              <i class="fa fa-map-marker"></i>North Main Street,Brooklyn Australia
+              	U+ 메시징 서버 개발/운영
             </li>
             <li>
-              <i class="fa fa-envelope-o"></i>Email: contact@mail.com
+              	CJ PG 승인 서버 개발/운영
             </li>
             <li>
-              <i class="fa fa-phone"></i>Phone:+88 01672 506 744
+            	본인확인서비스 개발/운영
+            </li>
+            <li>
+            	SI 프로젝트 수행
+            	<ul>
+            		<li>국립수산과학원 프로젝트 수행 - 수산물안전정보시스템 구축</li>
+            		<li>부산항만청 프로젝트 수행 - 위험물컨테이너 관리 시스템 구축</li>
+            	</ul>
             </li>
           </ul>
-
+        </div>
+        <br />
+        <div class="block">
+          <h2>Contact</h2>
+          <ul class="address-block">
+            <li>
+              <i class="fa fa-map-marker"></i>Seoul, Korea
+            </li>
+            <li>
+              <i class="fa fa-envelope-o"></i>Email: parkhjpp@gmail.com
+            </li>
+          </ul>
           <ul class="social-icons">
             <li>
               <a href="http://www.themefisher.com"><i class="fa fa-google"></i></a>
@@ -88,6 +80,7 @@ permalink: /contact/
           </ul>
         </div>
       </div>
+      <!-- 
       <div class="col-md-6 col-sm-12">
         <div class="block">
           <h2>We Also Count In Google Map</h2>
@@ -96,19 +89,61 @@ permalink: /contact/
             </div>
         </div>
       </div>
+       -->
     </div>
   </div>
 </section>
-<!-- Call to action Start -->
-<section id="call-to-action">
+
+<!-- Service Start -->
+<section id="service">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
-        </div>
+      <div class="section-title">
+        <h2>Skills</h2>
+      </div>
+    </div>
+    <div class="row ">
+      <div class="col-sm-6 col-md-3">
+        <img src="/img/techList/java.png" width="100px" height="100px" alt="Img">
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <img src="/img/techList/Android.png" width="100px" height="120px" alt="Img">
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <img src="/img/techList/spring.png" width="240px" height="100px" alt="Img">
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <img src="/img/techList/c.png" width="150px" height="150px" alt="Img">
+      </div>
+    </div>
+    <br />
+    <div class="row ">
+      <div class="col-sm-6 col-md-3">
+        <img src="/img/techList/github.png" width="170px" height="80px" alt="Img">
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <img src="/img/techList/maven.png" width="200px" height="80px" alt="Img">
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <img src="/img/techList/gladle.png" width="170px" height="80px" alt="Img">
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <img src="/img/techList/docker.png" width="200px" height="100px" alt="Img">
+      </div>
+    </div>
+    <br />
+    <div class="row ">
+      <div class="col-sm-6 col-md-3">
+        <img src="/img/techList/oracle.png" width="200px" height="80px" alt="Img">
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <img src="/img/techList/mysql.jpg" width="170px" height="80px" alt="Img">
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <img src="/img/techList/redis.png" width="170px" height="70px" alt="Img">
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <img src="/img/techList/mongodb.png" width="170px" height="70px" alt="Img">
       </div>
     </div>
   </div>
