- add category menu in blog

--- a/blog.html
+++ b/blog.html
@@ -4,19 +4,7 @@ title: Blog
 permalink: /blog/
 ---
 <!-- Slider Start -->
-
-<section id="global-header">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <h1>Tech blog</h1>
-          <p>Tech posts and news</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+{% include category-header.html %}
 
 <!-- HTML elements for search -->
 <div id="search-container">
