--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ permalink: /
   </div>
 </section>
 <!-- Wrapper Start -->
+<!--
 <section id="intro">
   <div class="container">
     <div class="row">
@@ -31,15 +32,16 @@ permalink: /
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id </p>
         </div>
-      </div><!-- .col-md-7 close -->
+      </div>
       <div class="col-md-5 col-sm-12">
         <div class="block">
           <img src="img/wrapper-img.png" alt="Img">
         </div>
-      </div><!-- .col-md-5 close -->
+      </div>
     </div>
   </div>
 </section>
+
 
 <section id="feature">
 <div class="container">
@@ -54,6 +56,7 @@ permalink: /
   </div>
 </div>
 </section>
+-->
 <!-- Call to action Start -->
 <!-- 
 <section id="call-to-action">
