--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@ permalink: /
     <div class="row">
       <div class="col-md-10 col-md-offset-2">
         <div class="block">
-          <h1 class="animated fadeInUp">My Tech Blog &#38; <br> Life Story</h1>
-          <!-- 
-          <p class="animated fadeInUp">We love the Web and the work we do. We work closely with our clients to deliver the best possible solutions for their needs</p>
-           -->
+          <h1 class="animated fadeInUp">노력하는 개발자의 개인 블로그 입니다.</h1>
+          <p class="animated fadeInUp">개발에 필요한 내용들을 정리하고 되뇌여 보기 위한 블로그입니다.</p>
+          <p class="animated fadeInUp">부족하지만 피드백 주시면 감사하겠습니다.</p>
         </div>
       </div>
     </div>
