--- a/contact.html
+++ b/contact.html
@@ -26,13 +26,16 @@ permalink: /contact/
           <h4>주요 경력</h4>
           <ul class="address-block">
             <li>
+              카카오엔터프라이즈 메시징 서버 개발/운영
+            </li>
+            <li>
               	U+ 메시징 서버 개발/운영
             </li>
             <li>
-              	CJ PG 승인 서버 개발/운영
+              	CJ PG 서버 개발/운영
             </li>
             <li>
-            	본인확인서비스 개발/운영
+            	휴대폰 본인확인서비스 개발/운영
             </li>
             <li>
             	SI 프로젝트 수행
