--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: AllCreator Blog
+title: Parker Blog
 permalink: /
 ---
 
@@ -10,9 +10,8 @@ permalink: /
     <div class="row">
       <div class="col-md-10 col-md-offset-2">
         <div class="block">
-          <h1 class="animated fadeInUp">노력하는 개발자의 개인 블로그 입니다.</h1>
-          <p class="animated fadeInUp">개발에 필요한 내용들을 정리하고 되뇌여 보기 위한 블로그입니다.</p>
-          <p class="animated fadeInUp">부족하지만 피드백 주시면 감사하겠습니다.</p>
+          <h1 class="animated fadeInUp">잊어버리기 전에 기록하기 위한 블로그입니다.</h1>
+          <p class="animated fadeInUp">개발에 필요한 내용들을 정리하고 되뇌여 보기 위한 내용들입니다.</p>
         </div>
       </div>
     </div>
