update jekyll version

--- a/contact.html
+++ b/contact.html
@@ -23,23 +23,38 @@ permalink: /contact/
       <div class="block">
           <h2>About me!</h2>
           <br />
-          <h4>주요 경력</h4>
+          <h4>대표 수행 프로젝트</h4>
           <ul class="address-block">
             <li>
-              	U+ 메시징 서버 개발/운영
+                카카오엔터프라이즈 메시징 시스템 구축 <br /><br />
+                <ul>
+                  <li> Spring Stack : Springboot3.0, Spring-batch, Spring-oauth2, Spring-data-jpa, Spring-AMQP, Spring-Openfeign, Spring-Reactive </li>
+                  <li> Infra Stack : Kakao-cloud VM, RabbitMQ, Redis, MySql </li>
+                  <li> Language Stack : Jdk17 </li>
+                </ul>
             </li>
             <li>
-              	CJ PG 승인 서버 개발/운영
+              	U+ 메시징 서버 개발/운영 <br /><br />
+                <ul>
+                  <li> Spring Stack : Springboot2.7 </li>
+                  <li> Infra Stack : CentOS, Linux, Oracle </li>
+                  <li> Language Stack : Jdk1.8, C </li>
+                </ul>
             </li>
             <li>
-            	본인확인서비스 개발/운영
+              	CJ PG 승인 서버 개발/운영 <br /><br />
+                <ul>
+                  <li> Spring Stack : Springboot2.x </li>
+                  <li> Infra Stack : CentOS, Linux, Oracle </li>
+                  <li> Language Stack : Jdk1.5</li>
+                </ul>
             </li>
             <li>
-            	SI 프로젝트 수행
-            	<ul>
-            		<li>국립수산과학원 프로젝트 수행 - 수산물안전정보시스템 구축</li>
-            		<li>부산항만청 프로젝트 수행 - 위험물컨테이너 관리 시스템 구축</li>
-            	</ul>
+            	서울신용평가정보 본인확인서비스 개발/운영 <br /><br />
+                <ul>
+                  <li> Infra Stack : CentOS, Linux, Oracle, Jeus-Web </li>
+                  <li> Language Stack : Jdk1.5, JSP </li>
+                </ul>
             </li>
           </ul>
         </div>
@@ -54,43 +69,8 @@ permalink: /contact/
               <i class="fa fa-envelope-o"></i>Email: parkhjpp@gmail.com
             </li>
           </ul>
-          <!-- 
-          <ul class="social-icons">
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-google"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-linkedin"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-pinterest"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-dribbble"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-behance"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-twitter"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-facebook"></i></a>
-            </li>
-          </ul>
-           -->
         </div>
       </div>
-      <!-- 
-      <div class="col-md-6 col-sm-12">
-        <div class="block">
-          <h2>We Also Count In Google Map</h2>
-            <div class="google-map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.472979439986!2d-73.97769068489596!3d40.7516207793276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2590247c56379%3A0x15e13bea38b43e18!2sChrysler+Building!5e0!3m2!1sen!2sus!4v1477406538220" width="555" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
-        </div>
-      </div>
-       -->
     </div>
   </div>
 </section>
