--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@ permalink: /
     <div class="row">
       <div class="col-md-10 col-md-offset-2">
         <div class="block">
-          <h1 class="animated fadeInUp">잊어버리기 전에 기록하기 위한 블로그입니다.</h1>
-          <p class="animated fadeInUp">개발에 필요한 내용들을 정리하고 되뇌여 보기 위한 내용들입니다.</p>
+          <p>Hello, I’m</p>
+          <h1 class="animated fadeInUp">Parker</h1>
+          <p class="adjust">CREATIVE BACK-END DEVELOPER</p>
+          <p class="animated fadeInUp">개발에 필요한 내용들을 정리하고 기록하기 위한 저장소 입니다.</p>
         </div>
       </div>
     </div>
